# bazel-spm-examples

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  Package.resolved  Package.swift  apple_build_tests.bzl  deps.MODULE.bazel  features_enabled.bzl  rules_spm.patch
.github/: dependabot.yml
.github/workflows/: ci.yml
Sources/AardvarkExample/: AardvarkExample.swift  BUILD.bazel
Sources/AlamofireExample/: AlamofireExample.swift  BUILD.bazel
Sources/AlgorithmsExample/: AlgorithmsExample.swift  BUILD.bazel
Sources/ArgumentParserExample/: ArgumentParserExample.swift  BUILD.bazel
Sources/AsyncAlgorithmsExample/: AsyncAlgorithmsExample.swift  BUILD.bazel
Sources/BraintreeExample/: BUILD.bazel  BraintreeExample.swift
Sources/BrazeExample/: BUILD.bazel  BrazeExample.swift
Sources/CollectionsExample/: BUILD.bazel  CollectionsExample.swift
Sources/ComposableArchitectureExample/: BUILD.bazel  ComposableArchitectureExample.swift
Sources/CryptoExample/: BUILD.bazel  CryptoExample.swift
Sources/EvolvedInterfaceRepro/: BUILD.bazel  Library.swift  main.swift  swift_evolved_outputs.bzl
Sources/EvolvedInterfaceRepro/lib_impl/: BUILD.bazel
Sources/FLEXExample/: BUILD.bazel  FLEXExample.swift
Sources/FacebookExample/: BUILD.bazel  FacebookExample.swift
Sources/GTMAppAuthExample/: BUILD.bazel  GTMAppAuthExample.swift  split_swift_outputs.bzl
Sources/GoogleAppMeasurementExample/: BUILD.bazel  GoogleAppMeasurementExample.swift
Sources/IDKitExample/: BUILD.bazel  IDKitExample.swift
Sources/LogExample/: BUILD.bazel  LogExample.swift
Sources/MapboxMapsExample/: BUILD.bazel  MapboxMapsExample.swift
Sources/MiSnapExample/: BUILD.bazel  MiSnapExample.swift
Sources/NIOExample/: BUILD.bazel  NIOExample.swift
Sources/OpenCVExample/: BUILD.bazel  OpenCVCppBridge.cc  OpenCVCppBridge.h  OpenCVExample.swift  OpenCVObjCBridge.h  OpenCVObjCBridge.m  ios_forced_cpu_build_test.bzl
Sources/PerceptionExample/: BUILD.bazel  PerceptionExample.swift
Sources/RevealExample/: BUILD.bazel  RevealExampleTests.swift
Sources/RxSwiftExample/: BUILD.bazel  RxSwiftExample.swift
Sources/SentryExample/: BUILD.bazel  SentryExample.swift
Sources/SnapshotTestingExample/: BUILD.bazel  SnapshotTestingExample.swift
Sources/SwiftSyntaxExample/: BUILD.bazel  SwiftSyntaxExample.swift
Sources/WebP/: BUILD.bazel  WebPExample.swift
Sources/YogaExample/: BUILD.bazel  YogaExample.swift
opencv2.xcframework/ios-arm64_x86_64-simulator/opencv2.framework/Versions/A/Headers/: cvconfig.h
opencv2.xcframework/ios-arm64_x86_64-simulator/opencv2.framework/Versions/Current/Headers/: opencv_modules.hpp
patches/: BUILD.bazel  googleappmeasurement.BUILD.bazel  reveal_sdk.BUILD.bazel  rspm_duplicate_srcs.patch  webp.BUILD.bazel  yoga_package.patch
