module(
    name = "bazel_spm_examples",
    version = "0.0.0",
)

bazel_dep(name = "apple_support", version = "2.5.4")
bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_apple", version = "4.5.3")
bazel_dep(name = "rules_cc", version = "0.2.18")
bazel_dep(name = "rules_swift", version = "3.6.1")
bazel_dep(name = "rules_swift_package_manager", version = "1.17.1")

bazel_dep(name = "bazel_skylib_gazelle_plugin", version = "1.9.0", dev_dependency = True)
bazel_dep(name = "gazelle", version = "0.50.0", dev_dependency = True)
bazel_dep(name = "swift_gazelle_plugin", version = "0.2.2", dev_dependency = True)

system_sdk = use_extension("@rules_swift//swift:extensions.bzl", "system_sdk")
system_sdk.configure_sdks(include_all = True)
use_repo(system_sdk, "system_sdk")

swift_deps = use_extension(
    "@rules_swift_package_manager//:extensions.bzl",
    "swift_deps",
)
swift_deps.from_package(
    declare_swift_deps_info = True,
    resolved = "//:Package.resolved",
    swift = "//:Package.swift",
)
swift_deps.configure_package(
    name = "swiftpkg_misnap_ios",
    target_deps = {
        "MiSnap": [
            ":MiSnapCamera",
            ":MiSnapCore",
            ":MiSnapScience",
        ],
        "MiSnapFacialCapture": [":MiSnapCore"],
        "MiSnapFacialCaptureUX": [
            ":MiSnapAssetManager",
            ":MiSnapCore",
            ":MiSnapFacialCapture",
        ],
        "MiSnapNFC": [":MiSnapCore"],
        "MiSnapNFCUX": [
            ":MiSnapAssetManager",
            ":MiSnapCore",
            ":MiSnapNFC",
        ],
        "MiSnapUX": [
            ":MiSnap",
            ":MiSnapAssetManager",
            ":MiSnapCamera",
            ":MiSnapCore",
            ":MiSnapScience",
        ],
        "MiSnapVoiceCapture": [":MiSnapCore"],
        "MiSnapVoiceCaptureUX": [
            ":MiSnapAssetManager",
            ":MiSnapCore",
            ":MiSnapVoiceCapture",
        ],
    },
)
use_repo(
    swift_deps,
    "swift_deps_info",
    "swift_package",
    "swiftpkg_aardvark",
    "swiftpkg_alamofire",
    "swiftpkg_appauth_ios",
    "swiftpkg_braintree_ios",
    "swiftpkg_gtm_session_fetcher",
    "swiftpkg_gtmappauth",
    "swiftpkg_misnap_ios",
    "swiftpkg_rxswift",
    "swiftpkg_swift_algorithms",
    "swiftpkg_swift_argument_parser",
    "swiftpkg_swift_async_algorithms",
    "swiftpkg_swift_collections",
    "swiftpkg_swift_composable_architecture",
    "swiftpkg_swift_crypto",
    "swiftpkg_swift_log",
    "swiftpkg_swift_nio",
    "swiftpkg_swift_perception",
    "swiftpkg_swift_snapshot_testing",
    "swiftpkg_swift_syntax",
)

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "sentry_dynamic_xcframework",
    build_file_content = """
load("@rules_apple//apple:apple.bzl", "apple_dynamic_xcframework_import")

apple_dynamic_xcframework_import(
    name = "Sentry",
    visibility = ["//visibility:public"],
    xcframework_imports = glob(["*.xcframework/**"]),
)
""",
    sha256 = "0dae35ca7542486a4186598394eb9b0d3ebe8402cedf5846af19cc44b89c9fb6",
    urls = [
        "https://github.com/getsentry/sentry-cocoa/releases/download/9.13.0/Sentry-Dynamic.xcframework.zip",
    ],
)

archive_override(
    module_name = "rules_apple",
    integrity = "sha256-KSeYH8qa5NwhTWEvfzhCg275mnA2psHRDc+uwL4E8qg=",
    strip_prefix = "rules_apple-8e21ee11562e182a35a13404f8f12cba56e850cc",
    urls = [
        "https://github.com/bazelbuild/rules_apple/archive/8e21ee11562e182a35a13404f8f12cba56e850cc.tar.gz",
    ],
)

archive_override(
    module_name = "rules_swift",
    integrity = "sha256-H0AVBE3+EnOP0FheGA5E8gREbjlEeZ1yVWSOktA9Rtk=",
    strip_prefix = "rules_swift-f35bdc631ad5e67574f5131b1b1b9800b4200732",
    urls = [
        "https://github.com/bazelbuild/rules_swift/archive/f35bdc631ad5e67574f5131b1b1b9800b4200732.tar.gz",
    ],
)
