module(
    name = "bazel_spm_examples",
    version = "0.0.0",
)

bazel_dep(name = "apple_support", version = "2.5.4")
bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "platforms", version = "1.1.0")
bazel_dep(name = "rules_apple", version = "4.5.3")
bazel_dep(name = "rules_cc", version = "0.2.18")
bazel_dep(name = "rules_swift", version = "3.6.1")
bazel_dep(name = "rules_swift_package_manager", version = "1.17.1")

bazel_dep(name = "bazel_skylib_gazelle_plugin", version = "1.9.0", dev_dependency = True)
bazel_dep(name = "gazelle", version = "0.51.0", dev_dependency = True)
bazel_dep(name = "swift_gazelle_plugin", version = "0.2.2", dev_dependency = True)

system_sdk = use_extension("@rules_swift//swift:extensions.bzl", "system_sdk")
system_sdk.configure_sdks(include_all = True)
use_repo(system_sdk, "system_sdk")

swift_deps = use_extension(
    "@rules_swift_package_manager//:extensions.bzl",
    "swift_deps",
)
swift_deps.from_package(
    declare_swift_deps_info = True,
    resolved = "//:Package.resolved",
    swift = "//:Package.swift",
)
swift_deps.configure_package(
    name = "swiftpkg_mapbox_common_ios",
    target_deps = {
        "MapboxCommon": [
            "@swiftpkg_turf_swift//:Turf",
        ],
    },
)
swift_deps.configure_package(
    name = "swiftpkg_mapbox_core_maps_ios",
    target_deps = {
        "MapboxCoreMaps": [
            "@swiftpkg_mapbox_common_ios//:MapboxCommon",
        ],
    },
)
swift_deps.configure_package(
    name = "swiftpkg_googleappmeasurement",
    build_file = "//patches:googleappmeasurement.BUILD.bazel",
)
swift_deps.configure_package(
    name = "swiftpkg_misnap_ios",
    target_deps = {
        "MiSnap": [
            ":MiSnapCamera",
            ":MiSnapCore",
            ":MiSnapScience",
        ],
        "MiSnapFacialCapture": [":MiSnapCore"],
        "MiSnapFacialCaptureUX": [
            ":MiSnapAssetManager",
            ":MiSnapCore",
            ":MiSnapFacialCapture",
        ],
        "MiSnapNFC": [":MiSnapCore"],
        "MiSnapNFCUX": [
            ":MiSnapAssetManager",
            ":MiSnapCore",
            ":MiSnapNFC",
        ],
        "MiSnapUX": [
            ":MiSnap",
            ":MiSnapAssetManager",
            ":MiSnapCamera",
            ":MiSnapCore",
            ":MiSnapScience",
        ],
        "MiSnapVoiceCapture": [":MiSnapCore"],
        "MiSnapVoiceCaptureUX": [
            ":MiSnapAssetManager",
            ":MiSnapCore",
            ":MiSnapVoiceCapture",
        ],
    },
)
use_repo(
    swift_deps,
    "swift_deps_info",
    "swift_package",
    "swiftpkg_aardvark",
    "swiftpkg_alamofire",
    "swiftpkg_appauth_ios",
    "swiftpkg_braintree_ios",
    "swiftpkg_googleappmeasurement",
    "swiftpkg_gtm_session_fetcher",
    "swiftpkg_gtmappauth",
    "swiftpkg_mapbox_maps_ios",
    "swiftpkg_misnap_ios",
    "swiftpkg_rxswift",
    "swiftpkg_swift_algorithms",
    "swiftpkg_swift_argument_parser",
    "swiftpkg_swift_async_algorithms",
    "swiftpkg_swift_collections",
    "swiftpkg_swift_composable_architecture",
    "swiftpkg_swift_crypto",
    "swiftpkg_swift_log",
    "swiftpkg_swift_nio",
    "swiftpkg_swift_perception",
    "swiftpkg_swift_snapshot_testing",
    "swiftpkg_swift_syntax",
)

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "sentry_dynamic_xcframework",
    build_file_content = """
load("@rules_apple//apple:apple.bzl", "apple_dynamic_xcframework_import")

apple_dynamic_xcframework_import(
    name = "Sentry",
    visibility = ["//visibility:public"],
    xcframework_imports = glob(["*.xcframework/**"]),
)
""",
    sha256 = "0dae35ca7542486a4186598394eb9b0d3ebe8402cedf5846af19cc44b89c9fb6",
    urls = [
        "https://github.com/getsentry/sentry-cocoa/releases/download/9.13.0/Sentry-Dynamic.xcframework.zip",
    ],
)

archive_override(
    module_name = "rules_apple",
    integrity = "sha256-KThDAqlzs317yMtEg5UfuOYcIzBTw3pRl+ssN/G6iw8=",
    strip_prefix = "rules_apple-fa73b6e06ab1937733f8d44ab0330b21509c87eb",
    urls = [
        "https://github.com/bazelbuild/rules_apple/archive/fa73b6e06ab1937733f8d44ab0330b21509c87eb.tar.gz",
    ],
)

archive_override(
    module_name = "rules_swift",
    integrity = "sha256-43OBTh3U0Ml7EH/V7XlBNY8QMZIzx3lZh4tytEvO47w=",
    strip_prefix = "rules_swift-ce0de97eea7287def102179290fa77095b105465",
    urls = [
        "https://github.com/bazelbuild/rules_swift/archive/ce0de97eea7287def102179290fa77095b105465.tar.gz",
    ],
)
