module(
    name = "bazel_spm_examples",
    version = "0.0.0",
)

bazel_dep(name = "apple_support", version = "2.6.1")
bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "platforms", version = "1.1.0")
bazel_dep(name = "rules_apple", version = "5.0.0-rc2")
bazel_dep(name = "rules_cc", version = "0.2.19")
bazel_dep(name = "rules_swift", version = "4.0.0-rc3")
bazel_dep(name = "rules_swift_package_manager", version = "1.19.0")

bazel_dep(name = "bazel_skylib_gazelle_plugin", version = "1.9.0", dev_dependency = True)
bazel_dep(name = "gazelle", version = "0.51.3", dev_dependency = True)
bazel_dep(name = "swift_gazelle_plugin", version = "0.2.2", dev_dependency = True)

system_sdk = use_extension("@rules_swift//swift:extensions.bzl", "system_sdk")
system_sdk.configure_sdks(include_all = True)
use_repo(system_sdk, "system_sdk")

swift_deps = use_extension(
    "@rules_swift_package_manager//:extensions.bzl",
    "swift_deps",
)
swift_deps.from_package(
    declare_swift_deps_info = True,
    resolved = "//:Package.resolved",
    swift = "//:Package.swift",
)
swift_deps.configure_package(
    name = "swiftpkg_googleappmeasurement",
    build_file = "//patches:googleappmeasurement.BUILD.bazel",
)
swift_deps.configure_package(
    name = "swiftpkg_reveal_sdk",
    build_file = "//patches:reveal_sdk.BUILD.bazel",
)

include("//:deps.MODULE.bazel")

use_repo(
    swift_deps,
    "swift_deps_info",
    "swift_package",
    "swiftpkg_aardvark",
    "swiftpkg_alamofire",
    "swiftpkg_appauth_ios",
    "swiftpkg_braintree_ios",
    "swiftpkg_braze_swift_sdk",
    "swiftpkg_facebook_ios_sdk",
    "swiftpkg_googleappmeasurement",
    "swiftpkg_gtm_session_fetcher",
    "swiftpkg_gtmappauth",
    "swiftpkg_mapbox_maps_ios",
    "swiftpkg_misnap_ios",
    "swiftpkg_reveal_sdk",
    "swiftpkg_rxswift",
    "swiftpkg_swift_algorithms",
    "swiftpkg_swift_argument_parser",
    "swiftpkg_swift_async_algorithms",
    "swiftpkg_swift_collections",
    "swiftpkg_swift_composable_architecture",
    "swiftpkg_swift_crypto",
    "swiftpkg_swift_log",
    "swiftpkg_swift_nio",
    "swiftpkg_swift_perception",
    "swiftpkg_swift_snapshot_testing",
    "swiftpkg_swift_syntax",
)

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "sentry_dynamic_xcframework",
    build_file_content = """
load("@rules_apple//apple:apple.bzl", "apple_dynamic_xcframework_import")

apple_dynamic_xcframework_import(
    name = "Sentry",
    visibility = ["//visibility:public"],
    xcframework_imports = glob(["*.xcframework/**"]),
)
""",
    sha256 = "0dae35ca7542486a4186598394eb9b0d3ebe8402cedf5846af19cc44b89c9fb6",
    urls = [
        "https://github.com/getsentry/sentry-cocoa/releases/download/9.13.0/Sentry-Dynamic.xcframework.zip",
    ],
)

archive_override(
    module_name = "rules_swift",
    integrity = "sha256-iy7RCOltan+1O8izx5RTIE7UwrypzFQ7hXoIgkIgMdA=",
    strip_prefix = "rules_swift-e7944a5349cd8d1d2326c05039bdba5d223b30b5",
    urls = [
        "https://github.com/bazelbuild/rules_swift/archive/e7944a5349cd8d1d2326c05039bdba5d223b30b5.tar.gz",
    ],
)

http_archive(
    name = "WebP",
    build_file = "//patches:webp.BUILD.bazel",
    patch_cmds = [
        'for dir in libwebp-*-ios-framework/SharpYuv.xcframework/*/Headers/SharpYuv; do tmp="${dir}.tmp-lowercase"; mv "${dir}" "${tmp}"; mv "${tmp}" "${dir%/SharpYuv}/sharpyuv"; done',
    ],
    sha256 = "779fcb78294e59f393319c0f9bf2e1126f9479e862a22fe50bc50d9489c15cd3",
    url = "https://storage.googleapis.com/downloads.webmproject.org/releases/webp/libwebp-1.4.0-ios-framework.tar.gz",
)
