load("@rules_swift//swift:swift_library.bzl", "swift_library")
load("//:apple_build_tests.bzl", "apple_build_tests")

swift_library(
    name = "AardvarkExample",
    srcs = ["AardvarkExample.swift"],

    copts = select({
        "//:explicit_modules_enabled": [],
        # NOTE: This package doesn't build without this, solved in explicit modules
        "//conditions:default": ["-Xcc", "-DSWIFT_PACKAGE"],
    }),
    module_name = "AardvarkExample",
    tags = ["manual"],
    target_compatible_with = ["@platforms//os:ios"],
    visibility = ["//visibility:public"],
    deps = ["@swiftpkg_aardvark//:Aardvark"],
)

apple_build_tests(
    exclude = [
        "macos",
        "tvos",
        "watchos",
        "visionos",
    ],
    targets = [":AardvarkExample"],
)
