load("@rules_swift//swift:swift_library.bzl", "swift_library")
load("//:apple_build_tests.bzl", "apple_build_tests")

swift_library(
    name = "AlamofireExample",
    srcs = ["AlamofireExample.swift"],
    module_name = "AlamofireExample",
    tags = ["manual"],
    visibility = ["//visibility:public"],
    deps = ["@swiftpkg_alamofire//:AlamofireDynamic"],
)

# Alamofire does not support visionOS.
apple_build_tests(
    exclude = ["visionos"],
    targets = [":AlamofireExample"],
)
