load("@bazel_skylib//rules:build_test.bzl", "build_test")
load("@rules_swift//swift:swift_library.bzl", "swift_library")
load("//:apple_build_tests.bzl", "apple_build_tests")

swift_library(
    name = "AlgorithmsExample",
    srcs = ["AlgorithmsExample.swift"],
    module_name = "AlgorithmsExample",
    tags = ["manual"],
    visibility = ["//visibility:public"],
    deps = ["@swiftpkg_swift_algorithms//:Algorithms"],
)

apple_build_tests(targets = [":AlgorithmsExample"])

build_test(
    name = "build_test",
    targets = [":AlgorithmsExample"],
)
