load("@bazel_skylib//rules:build_test.bzl", "build_test")
load("@rules_swift//swift:swift_library.bzl", "swift_library")
load("//:apple_build_tests.bzl", "apple_build_tests")

swift_library(
    name = "ArgumentParserExample",
    srcs = ["ArgumentParserExample.swift"],
    module_name = "ArgumentParserExample",
    tags = ["manual"],
    visibility = ["//visibility:public"],
    deps = ["@swiftpkg_swift_argument_parser//:ArgumentParser"],
)

apple_build_tests(targets = [":ArgumentParserExample"])

build_test(
    name = "build_test",
    targets = [":ArgumentParserExample"],
)
