load("@bazel_skylib//rules:build_test.bzl", "build_test")
load("@rules_swift//swift:swift_library.bzl", "swift_library")
load("//:apple_build_tests.bzl", "apple_build_tests")

swift_library(
    name = "AsyncAlgorithmsExample",
    srcs = ["AsyncAlgorithmsExample.swift"],
    module_name = "AsyncAlgorithmsExample",
    tags = ["manual"],
    visibility = ["//visibility:public"],
    deps = ["@swiftpkg_swift_async_algorithms//:AsyncAlgorithms"],
)

apple_build_tests(targets = [":AsyncAlgorithmsExample"])

build_test(
    name = "build_test",
    targets = [":AsyncAlgorithmsExample"],
)
