load("@bazel_skylib//rules:build_test.bzl", "build_test")
load("@rules_swift//swift:swift_library.bzl", "swift_library")
load("//:apple_build_tests.bzl", "apple_build_tests")

swift_library(
    name = "CollectionsExample",
    srcs = ["CollectionsExample.swift"],
    module_name = "CollectionsExample",
    tags = ["manual"],
    visibility = ["//visibility:public"],
    deps = ["@swiftpkg_swift_collections//:Collections"],
)

apple_build_tests(targets = [":CollectionsExample"])

build_test(
    name = "build_test",
    targets = [":CollectionsExample"],
)
