load("@rules_swift//swift:swift_library.bzl", "swift_library")
load("//:apple_build_tests.bzl", "apple_build_tests")

swift_library(
    name = "ComposableArchitectureExample",
    srcs = ["ComposableArchitectureExample.swift"],
    module_name = "ComposableArchitectureExample",
    tags = ["manual"],
    visibility = ["//visibility:public"],
    deps = ["@swiftpkg_swift_composable_architecture//:ComposableArchitecture"],
)

apple_build_tests(targets = [":ComposableArchitectureExample"])
