load("@bazel_skylib//rules:build_test.bzl", "build_test")
load("@rules_swift//swift:swift_library.bzl", "swift_library")
load("//:apple_build_tests.bzl", "apple_build_tests")

swift_library(
    name = "CryptoExample",
    srcs = ["CryptoExample.swift"],
    module_name = "CryptoExample",
    tags = ["manual"],
    visibility = ["//visibility:public"],
    deps = ["@swiftpkg_swift_crypto//:Crypto"],
)

apple_build_tests(targets = [":CryptoExample"])

build_test(
    name = "build_test",
    targets = [":CryptoExample"],
)
